--- a/config/sync/field.storage.block_content.field_articles.yml
+++ b/config/sync/field.storage.block_content.field_articles.yml
@@ -14,6 +14,7 @@ type: overview_filter
 settings:
   allow_facets: 0
   overview: node_article
+  entity_bundle: ''
 module: entity_overview
 locked: false
 cardinality: 1
