--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -112,7 +112,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: full_width_16_9
+      view_mode: default
       link: false
     third_party_settings: {  }
     weight: 2
