--- a/config/sync/core.entity_view_display.node.news.full.yml
+++ b/config/sync/core.entity_view_display.node.news.full.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.news.body
     - field.field.node.news.content_hierarchy
+    - field.field.node.news.field_article_categories
     - field.field.node.news.field_description
     - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
@@ -93,7 +94,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: full_width_16_9
+      view_mode: default
       link: false
     third_party_settings: {  }
     weight: 0
@@ -101,6 +102,7 @@ content:
 hidden:
   content_hierarchy: true
   content_moderation_control: true
+  field_article_categories: true
   field_factboxes: true
   field_graphics: true
   field_header: true
