--- a/config/sync/core.entity_view_display.node.news.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.news.slideshow.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.slideshow
     - field.field.node.news.body
     - field.field.node.news.content_hierarchy
+    - field.field.node.news.field_article_categories
     - field.field.node.news.field_description
     - field.field.node.news.field_factboxes
     - field.field.node.news.field_graphics
@@ -111,6 +112,7 @@ hidden:
   body: true
   content_hierarchy: true
   content_moderation_control: true
+  field_article_categories: true
   field_header: true
   field_hide_breadcrumb: true
   field_hide_title: true
