--- a/config/sync/field.storage.block_content.field_title.yml
+++ b/config/sync/field.storage.block_content.field_title.yml
@@ -1,18 +1,18 @@
-uuid: 92e5f102-9b99-47dd-b75f-40ff3a125e3c
+uuid: c74acbad-e9d5-47b1-9bad-18e313eae580
 langcode: da
 status: true
 dependencies:
   module:
     - block_content
-    - entity_overview
-id: block_content.field_news_overview
-field_name: field_news_overview
+id: block_content.field_title
+field_name: field_title
 entity_type: block_content
-type: overview_filter
+type: string
 settings:
-  allow_facets: 0
-  overview: node_news
-module: entity_overview
+  max_length: 255
+  case_sensitive: false
+  is_ascii: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
