--- a/config/sync/core.entity_view_display.node.article.simple_list.yml
+++ b/config/sync/core.entity_view_display.node.article.simple_list.yml
@@ -67,7 +67,7 @@ content:
     type: entity_reference_label
     label: hidden
     settings:
-      link: false
+      link: true
     third_party_settings: {  }
     weight: 0
     region: content
