--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "drupal/oembed_providers": "^2.1",
         "drupal/paragraphs": "^1.0",
         "drupal/paragraphs_asymmetric_translation_widgets": "^1.0@beta",
-        "drupal/pathauto": "1.9.0 as 1.10.0",
+        "drupal/pathauto": "^1.11",
         "drupal/profile": "^1.3",
         "drupal/promote_disable": "^2.0",
         "drupal/redirect": "^1.0",
