--- a/config/sync/core.entity_form_display.taxonomy_term.article_types.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.article_types.default.yml
@@ -6,11 +6,10 @@ dependencies:
     - field.field.taxonomy_term.article_types.field_link_liste_headline
     - field.field.taxonomy_term.article_types.field_overview
     - field.field.taxonomy_term.article_types.field_overview_headline
-    - field.field.taxonomy_term.article_types.layout_builder__layout
     - taxonomy.vocabulary.article_types
   module:
-    - path
     - entity_overview
+    - path
     - text
 _core:
   default_config_hash: TVYAGctAu7bmQ6SO7VhW1jRQlLtsTH0BbvuXlI3S-dE
@@ -82,5 +81,4 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  layout_builder__layout: true
+hidden: {  }
