--- a/config/sync/entity_overview.overview.node_article.yml
+++ b/config/sync/entity_overview.overview.node_article.yml
@@ -8,14 +8,12 @@ entity_bundles:
   node:
     - article
 fields:
-  owner: entity_autocomplete
   text: textfield
-  field_article_categories: checkboxes
   field_article_type: checkboxes
   field_class: checkboxes
   field_location: checkboxes
   field_season: checkboxes
   field_subject: checkboxes
 engine_id: relewise
-sort_field: changed
-show_total: ''
+sort_field: field_list_date
+show_total: results
