--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -57,7 +57,7 @@ third_party_settings:
       label: 'Page header'
       region: content
       parent_name: ''
-      weight: 3
+      weight: 2
       format_type: fieldset
       format_settings:
         classes: ''
@@ -74,7 +74,7 @@ third_party_settings:
       label: Listevisning
       region: content
       parent_name: group_article_metadata
-      weight: 21
+      weight: 3
       format_type: tab
       format_settings:
         classes: ''
@@ -96,7 +96,7 @@ third_party_settings:
       label: 'Artikel metadata'
       region: content
       parent_name: ''
-      weight: 7
+      weight: 6
       format_type: tabs
       format_settings:
         classes: ''
@@ -115,7 +115,7 @@ third_party_settings:
       label: Kategorisering
       region: content
       parent_name: group_article_metadata
-      weight: 22
+      weight: 4
       format_type: tab
       format_settings:
         classes: ''
@@ -130,7 +130,7 @@ third_party_settings:
       label: Grej
       region: content
       parent_name: group_article_metadata
-      weight: 24
+      weight: 5
       format_type: tab
       format_settings:
         classes: ''
@@ -148,7 +148,7 @@ third_party_settings:
       label: Kolofon
       region: content
       parent_name: group_article_metadata
-      weight: 25
+      weight: 6
       format_type: tab
       format_settings:
         classes: ''
@@ -163,7 +163,7 @@ third_party_settings:
       label: Undervisningsmål
       region: content
       parent_name: group_article_metadata
-      weight: 26
+      weight: 7
       format_type: tab
       format_settings:
         classes: ''
@@ -178,7 +178,7 @@ third_party_settings:
       label: Faktabokse
       region: content
       parent_name: group_article_metadata
-      weight: 27
+      weight: 8
       format_type: tab
       format_settings:
         classes: ''
@@ -196,7 +196,7 @@ third_party_settings:
       label: Filer
       region: content
       parent_name: group_article_metadata
-      weight: 28
+      weight: 9
       format_type: tab
       format_settings:
         classes: ''
@@ -213,7 +213,7 @@ third_party_settings:
       label: Geolokation
       region: content
       parent_name: ''
-      weight: 19
+      weight: 17
       format_type: fieldset
       format_settings:
         classes: ''
@@ -334,7 +334,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 6
+    weight: 5
     region: content
     settings:
       rows: 9
@@ -344,42 +344,32 @@ content:
     third_party_settings: {  }
   content_hierarchy:
     type: content_hierarchy_modal
-    weight: 20
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_article_categories:
-    type: entity_reference_autocomplete_tags
-    weight: 2
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_article_image:
     type: media_library_widget
-    weight: 5
+    weight: 4
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_article_months:
     type: options_buttons
-    weight: 23
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
   field_article_related:
     type: entity_reference_autocomplete
-    weight: 17
+    weight: 15
     region: content
     settings:
       match_operator: CONTAINS
@@ -389,13 +379,13 @@ content:
     third_party_settings: {  }
   field_article_type:
     type: options_select
-    weight: 23
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
   field_class:
     type: entity_reference_autocomplete_tags
-    weight: 19
+    weight: 17
     region: content
     settings:
       match_operator: CONTAINS
@@ -421,7 +411,7 @@ content:
     third_party_settings: {  }
   field_colophon_editor:
     type: string_textfield
-    weight: 30
+    weight: 31
     region: content
     settings:
       size: 60
@@ -429,7 +419,7 @@ content:
     third_party_settings: {  }
   field_colophon_photographer:
     type: string_textfield
-    weight: 31
+    weight: 32
     region: content
     settings:
       size: 60
@@ -479,7 +469,7 @@ content:
     third_party_settings: {  }
   field_graphics:
     type: media_library_widget
-    weight: 4
+    weight: 3
     region: content
     settings:
       media_types: {  }
@@ -511,7 +501,7 @@ content:
     third_party_settings: {  }
   field_location:
     type: entity_reference_autocomplete_tags
-    weight: 20
+    weight: 18
     region: content
     settings:
       match_operator: CONTAINS
@@ -535,7 +525,7 @@ content:
     third_party_settings: {  }
   field_season:
     type: entity_reference_autocomplete_tags
-    weight: 21
+    weight: 19
     region: content
     settings:
       match_operator: CONTAINS
@@ -545,13 +535,13 @@ content:
     third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
-    weight: 21
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
   field_section_bg_graphics_pos:
     type: options_select
-    weight: 22
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -575,7 +565,7 @@ content:
     third_party_settings: {  }
   field_time:
     type: entity_reference_autocomplete_tags
-    weight: 22
+    weight: 20
     region: content
     settings:
       match_operator: CONTAINS
@@ -592,7 +582,7 @@ content:
     third_party_settings: {  }
   lat:
     type: string_textfield
-    weight: 39
+    weight: 40
     region: content
     settings:
       size: 60
@@ -600,7 +590,7 @@ content:
     third_party_settings: {  }
   lon:
     type: string_textfield
-    weight: 40
+    weight: 41
     region: content
     settings:
       size: 60
@@ -608,19 +598,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 18
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 11
+    weight: 10
     region: content
     settings:
       display_label: true
@@ -633,14 +623,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 15
+    weight: 14
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 12
+    weight: 11
     region: content
     settings:
       display_label: true
@@ -654,13 +644,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 7
     region: content
     settings:
       match_operator: CONTAINS
@@ -669,8 +659,9 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_article_categories: true
