--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         "drupal/profile": "^1.3",
         "drupal/promote_disable": "^2.0",
         "drupal/redirect": "^1.0",
+        "drupal/redirect_404": "^1.8",
         "drupal/redis": "^1.5",
         "drupal/role_delegation": "^1.1",
         "drupal/role_theme_switcher": "^1.1",
