SIS2-170: Grant more permissions and add filters to content view

--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -92,8 +92,11 @@ permissions:
   - 'administer webform'
   - 'administer webform submission'
   - 'administer workflows'
+  - 'assign all roles'
   - 'assign editor role'
+  - 'assign organization role'
   - 'assign webmaster role'
+  - 'assign writer role'
   - 'clone node entity'
   - 'configure all page node layout overrides'
   - 'configure any layout'
