--- a/config/sync/core.entity_form_display.profile.organization.default.yml
+++ b/config/sync/core.entity_form_display.profile.organization.default.yml
@@ -3,15 +3,15 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.profile.organization.field_orgamization_overview
     - field.field.profile.organization.field_organization_address
     - field.field.profile.organization.field_organization_description
     - field.field.profile.organization.field_organization_email
-    - field.field.profile.organization.field_organization_graphic
     - field.field.profile.organization.field_organization_logo
     - field.field.profile.organization.field_organization_overview
     - field.field.profile.organization.field_organization_phone
-    - field.field.profile.organization.field_organization_top_image
     - field.field.profile.organization.field_organization_website
+    - field.field.profile.organization.field_top_image
     - image.style.thumbnail
     - profile.type.organization
   module:
@@ -20,7 +20,7 @@ dependencies:
     - field_group
     - image
     - link
-    - paragraphs
+    - media_library
     - path
     - telephone
     - text
@@ -42,7 +42,7 @@ third_party_settings:
         id: ''
         open: false
         description: ''
-        required_fields: true
+        required_fields: false
 id: profile.organization.default
 targetEntityType: profile
 bundle: organization
@@ -70,14 +70,6 @@ content:
       placeholder: ''
       size: 60
     third_party_settings: {  }
-  field_organization_graphic:
-    type: image_image
-    weight: 5
-    region: content
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
   field_organization_logo:
     type: image_image
     weight: 3
@@ -88,7 +80,7 @@ content:
     third_party_settings: {  }
   field_organization_overview:
     type: overview_filter_widget
-    weight: 6
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -99,24 +91,6 @@ content:
     settings:
       placeholder: ''
     third_party_settings: {  }
-  field_organization_top_image:
-    type: paragraphs
-    weight: 0
-    region: content
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      closed_mode: summary
-      autocollapse: none
-      closed_mode_threshold: 0
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-      features:
-        collapse_edit_all: collapse_edit_all
-        duplicate: duplicate
-    third_party_settings: {  }
   field_organization_website:
     type: link_default
     weight: 3
@@ -125,9 +99,16 @@ content:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
+  field_top_image:
+    type: media_library_widget
+    weight: 0
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
