--- a/config/sync/core.entity_view_display.profile.organization.list.yml
+++ b/config/sync/core.entity_view_display.profile.organization.list.yml
@@ -4,15 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.profile.list
+    - field.field.profile.organization.field_orgamization_overview
     - field.field.profile.organization.field_organization_address
     - field.field.profile.organization.field_organization_description
     - field.field.profile.organization.field_organization_email
-    - field.field.profile.organization.field_organization_graphic
     - field.field.profile.organization.field_organization_logo
     - field.field.profile.organization.field_organization_overview
     - field.field.profile.organization.field_organization_phone
-    - field.field.profile.organization.field_organization_top_image
     - field.field.profile.organization.field_organization_website
+    - field.field.profile.organization.field_top_image
     - profile.type.organization
   module:
     - address
@@ -56,9 +56,8 @@ content:
 hidden:
   field_orgamization_overview: true
   field_organization_email: true
-  field_organization_graphic: true
   field_organization_overview: true
   field_organization_phone: true
-  field_organization_top_image: true
   field_organization_website: true
+  field_top_image: true
   search_api_excerpt: true
