--- a/config/sync/core.entity_view_display.profile.organization.default.yml
+++ b/config/sync/core.entity_view_display.profile.organization.default.yml
@@ -11,6 +11,8 @@ dependencies:
     - field.field.profile.organization.field_organization_overview
     - field.field.profile.organization.field_organization_phone
     - field.field.profile.organization.field_organization_website
+    - field.field.profile.organization.field_section_bg_graphics
+    - field.field.profile.organization.field_section_bg_graphics_pos
     - field.field.profile.organization.field_top_image
     - profile.type.organization
   module:
@@ -62,7 +64,7 @@ content:
     settings:
       view_mode: teaser
     third_party_settings: {  }
-    weight: 9
+    weight: 6
     region: content
   field_organization_phone:
     type: string
@@ -91,8 +93,10 @@ content:
       view_mode: hero
       link: false
     third_party_settings: {  }
-    weight: 10
+    weight: 7
     region: content
 hidden:
   field_orgamization_overview: true
+  field_section_bg_graphics: true
+  field_section_bg_graphics_pos: true
   search_api_excerpt: true
