--- a/config/sync/metatag.metatag_defaults.front.yml
+++ b/config/sync/metatag.metatag_defaults.front.yml
@@ -8,4 +8,11 @@ id: front
 label: Forside
 tags:
   canonical_url: '[site:url]'
+  content_language: '[node:langcode]'
+  description: '[node:field_description:value]'
+  image_src: '[node:field_list_media:entity:field_media_image]'
+  og_description: '[node:field_description:value]'
+  og_image: '[node:field_list_media:entity:field_media_image]'
+  og_title: '[node:title] | [site:name]'
+  og_url: '[site:url]'
   shortlink: '[site:url]'
