SIS2-330: Hide FAQ or Accordion block from Layout Builder

--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -47,7 +47,9 @@ third_party_settings:
         - layout_onecol
         - layout_twocol_section
         - layout_threecol_section
-      denylisted_blocks: {  }
+      denylisted_blocks:
+        'Inline blocks':
+          - 'inline_block:accordion'
       allowlisted_blocks: {  }
       restricted_categories:
         - Block
