SIS2-330: Hide Quote block from Layout Builder

--- a/config/sync/core.entity_view_display.node.page.full.yml
+++ b/config/sync/core.entity_view_display.node.page.full.yml
@@ -50,6 +50,7 @@ third_party_settings:
       denylisted_blocks:
         'Inline blocks':
           - 'inline_block:accordion'
+          - 'inline_block:quote'
       allowlisted_blocks: {  }
       restricted_categories:
         - Block
