SIS2-328: Default icon for files grid on media library

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -380,6 +380,12 @@ lexicon:
     theme:
       dist/components/css/components/03-organisms/lexicon.css: {}
 
+media-library:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/03-organisms/media-library.css: {}
+
 overview-form:
   version: VERSION
   css:
